[package]
edition = "2021"
name = "ecg"
version = "1.0.0"

authors = ["Etienne Napoleone <etienne@setten.io>"]
categories = ["command-line-utilities"]
description = "Heartbeats for cosmos validators"
documentation = "https://github.com/setten-io/ecg/blob/main/README.md"
keywords = ["monitoring", "validator", "cosmos", "heartbeat", "uptime"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/setten-io/ecg"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
serde-aux = "3.0"
serde_yaml = "0.9"
thiserror = "1.0"

[dependencies.reqwest]
features = ["json"]
version = "0.11"

[dependencies.tokio]
features = ["full"]
version = "1"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.clap]
features = ["derive", "env"]
version = "3.2"

[dependencies.ctrlc]
features = ["termination"]
version = "3.2"

[dev-dependencies]
indoc = "1.0"
